<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="www.myYadomsServer.com"
        android:inputType="textUri"
        android:key="server_url"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/server_url"/>

    <EditTextPreference
        android:defaultValue="8080"
        android:inputType="number"
        android:key="server_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/server_port"/>

    <SwitchPreference
        android:defaultValue="false"
        android:id="@+id/basic_authentication"
        android:key="basic_authentication"
        android:summary="@string/basic_authentication_summary"
        android:title="@string/basic_authentication"
        android:onClick="onBasicAuthenticationChange"/>

    <EditTextPreference
        android:defaultValue="yadoms"
        android:enabled="false"
        android:inputType="text"
        android:key="basic_authentication_username"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/basic_authentication_username"/>

    <EditTextPreference
        android:defaultValue="yadoms2017"
        android:enabled="false"
        android:inputType="textPassword"
        android:key="basic_authentication_password"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/basic_authentication_password"/>

</PreferenceScreen>
